--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@
 /.bundle
 
 # Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-*
+#/db/*.sqlite3
+#/db/*.sqlite3-*
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -38,3 +38,6 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+#Ignore RubyMine files
+/.idea
