--- a/test/fixtures/apartments.yml
+++ b/test/fixtures/apartments.yml
@@ -3,17 +3,15 @@
 one:
   apartment_number: 1
   apartment_area: 9.99
-  water_is_paid: 9.99
-  electricity_is_paid: 9.99
-  current_meters_water: 9.99
-  current_meter_electricity: 9.99
+  heating_counter: 9.99
+  water_counter: 9.99
+  electricity_counter: 9.99
   arrears: 9.99
 
 two:
   apartment_number: 1
   apartment_area: 9.99
-  water_is_paid: 9.99
-  electricity_is_paid: 9.99
-  current_meters_water: 9.99
-  current_meter_electricity: 9.99
+  heating_counter: 9.99
+  water_counter: 9.99
+  electricity_counter: 9.99
   arrears: 9.99
