--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,31 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  #adapter: sqlite3
+  #pool: <%#= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: nrfx
+  password: <%= ENV['osbb_DATABASE_PASSWORD'] %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
-
+  #database: db/development.sqlite3
+  database: osbb_development
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  #database: db/test.sqlite3
+  database: osbb_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  #database: db/production.sqlite3
+  database: osbb_production
